--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   # State Management tools
   get_it: ^7.6.0
   provider: ^6.0.5
+  firebase_auth: ^4.7.2
+  firebase_core: ^2.15.0
+  get: ^4.6.5
+  firebase_auth_helper: ^2.2.2
 
 dev_dependencies:
   flutter_test:
