--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,7 +70,8 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    // implementation(platform("com.google.firebase:firebase-bom:32.2.0"))
+    implementation(platform("com.google.firebase:firebase-bom:32.2.0"))
+    implementation("com.google.firebase:firebase-auth-ktx")
     // implementation("com.google.firebase:firebase-analytics-ktx")
     // implementation 'com.android.support:multidex:1.0.3'
 }
