--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   firebase_core: ^2.15.0
   get: ^4.6.5
   firebase_auth_helper: ^2.2.2
+  pinput: ^3.0.0
+  google_fonts: ^4.0.4
+  
 
 dev_dependencies:
   flutter_test:
